# afishka

./: .gitignore  README.md  recsys.py  search.py  sentence_similarity_check.ipynb
backend/: README.md  db.sqlite3  pyproject.toml
backend/backend/: permissions.py  settings.py  urls.py
backend/backend/apps/core/: admin.py  apps.py  email.py  events.py  models.py  serializers.py  urls.py  views.py
backend/backend/apps/core/migrations/: 0001_initial.py  0002_delete_telegramuser.py  0002_rename_telegram_id_telegramuser_tg_id.py  0003_remove_event_max_price_remove_event_min_price_and_more.py  0004_remove_event_active_event_accepted_and_more.py  0005_alter_event_accepted_alter_event_address_and_more.py  0006_event_creator_alter_event_date_and_more.py  0007_remove_event_date_event_end_event_start.py  0008_remove_event_duration.py  0009_alter_event_max_members_alter_event_organizer.py  0010_user_starred_events.py  0011_event_verbose_address.py  0012_rename_max_members_event_participants_and_more.py  0013_remove_event_slug_alter_event_participants.py  0014_remove_event_thumbnail.py  0015_event_max_price.py  0016_alter_event_max_price.py  0017_remove_event_verbose_address.py  0018_event_thumbnail.py
backend/templates/email/: account-activation.html
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/api/: local.ts
frontend/api/services/: auth.ts
frontend/src/: App.vue  main.ts  shims-vuex.d.ts
frontend/src/api/: index.ts  local.ts  types.ts
frontend/src/components/: ConfirmDialog.vue  Create.vue  EventCard.vue  EventInfo.vue  Homepage.vue  (+9 more)
(+24 files in other folders)
